--- a/main.css
+++ b/main.css
@@ -1,1 +1,29 @@
 
+.container {
+ width: 450px;
+ height: 550px;
+ display: flex;
+ flex-flow: row wrap;
+ padding:2px;
+ margin:0;
+ list-style: none;
+ justify-content:space-around;
+ border: 2px solid aqua;
+ background-color: coral;
+}
+
+.box {
+ width: 100px;
+ height: 100px;
+ border: 2px solid black;
+ line-height: 100px;
+ margin: auto;
+}
+.pink {
+  background: pink;
+}
+.blue {
+  background: blue;
+}
+
+
