--- a/main.css
+++ b/main.css
@@ -20,25 +20,31 @@ body {
  border: 2px solid aqua;
  background-color: coral;
 }
+.calculator input{
+  background: none;
+  border: none;
+  box-shadow: none;
+  width: 100%;
+  border-bottom: 2px solid #111;
+  padding: 20px;
+  text-align: right;
+  font-size: 40px;
+}
 
 .calculator-buttons{
   padding: 20px;
   display: grid;
 
-  grid-
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-
 .box {
- /*width: 100px;
+ width: 100px;
  height: 100px;
  border: 2px solid black;
  line-height: 100px;
  margin: auto;
-} */
-
-
-
+} 
 
 .pink {
   background: pink;
@@ -46,5 +52,13 @@ body {
 .blue {
   background: blue;
 }
-
+.calc-button {
+  background: rgba (0, 0, 0, 0.5);
+  border: 1px solid #111;
+  padding: 20px;
+  color: #EEE;
+  border-radius: 5px;
+  font-size: 22px;
+  cursor: pointer;
+}
 
