--- a/main.css
+++ b/main.css
@@ -3,30 +3,30 @@
 }
 
 body {
-  background: bisque;
+  background: black;
   padding-bottom: 30px;
   padding-top: 30px;
 }
 
 .calculator {
  width: 450px;
- height: 550px;
+ height: 600px;
  display: flex;
  flex-flow: row wrap;
  padding:2px;
  margin:0;
  list-style: none;
  justify-content:space-around;
- border: 5px solid aqua;
- background-color: coral;
+ border: 10px solid whitesmoke;
+ background-color: darkseagreen;
 }
 
 .calculator input{
   background: none;
-  border: none;
+  border: whitesmoke;
   box-shadow: none;
-  width: 100%;
-  border-bottom: 2px solid #111;
+  width: 70%;
+  border-bottom: 2px solid whitesmoke;
   padding: 20px;
   text-align: right;
   font-size: 40px;
@@ -35,31 +35,29 @@ body {
 .calculator-buttons{
   padding: 40px;
   display: grid;
-
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .box {
  width: 100px;
  height: 100px;
- border: 2px solid black;
+ border: 2px solid whitesmoke;
  line-height: 100px;
  margin: auto;
  
  background: rgba (0, 0, 0, 0.5);
-  border: 1px solid #111;
-  padding: 20px;
-  color: #EEE;
-  border-radius: 5px;
-  font-size: 22px;
-  cursor: pointer;
+ padding: 20px;
+ color: #EEE;
+ border-radius: 5px;
+ font-size: 22px;
+ cursor: pointer;
 } 
 
 .pink {
-  background: pink;
+  background: darkseagreen;
 }
 
 .blue {
-  background: blue;
+  background: darkseagreen;
 }
 
